header and slider done

--- a/css/new-style.css
+++ b/css/new-style.css
@@ -6,4 +6,9 @@
 .blur-background{
     position: relative;
     z-index: 9;
+    top: 20px;
+    background: transparent;
+    backdrop-filter: blur(55px);
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+    border-radius: 20px;
 }
