--- a/css/slider.css
+++ b/css/slider.css
@@ -1,241 +1,266 @@
+.heading-style-2 {
+  color: #fff;
+  font-size: 50px;
+  font-weight: 900;
+  line-height: 50px;
+  margin-bottom: 40px;
+  opacity: 0;
+  transition: opacity 3s;
+}
+#description {
+  color: #fff;
+  font-family: Montserrat;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 35px;
+  margin-bottom: 28px;
+  opacity: 0;
+  transition: opacity 3s;
+}
+#price {
+  color: #fff;
+  font-size: 30px;
+  font-weight: 700;
+  opacity: 0;
+  transition: opacity 3s;
+}
 .slider-main {
-    top: -100px;
-    min-height: 700px;
-    background: radial-gradient(
-      50% 50% at 50% 50%,
-      #c7f6d0 0%,
-      #7cb686 92.19%
-    );
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 100%;
-    overflow: hidden;
-    position: relative;
-    z-index: 1;
-  }
-  #backgrounds {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    z-index: -1;
-  }
-  .background {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    opacity: 0;
-    transition: opacity 2s ease-in-out;
-  }
-  .container-slide-content {position: relative; left: calc(50% - (1140px/2)); width: 50%; padding-block: 100px; max-width: 525px; height: 100%; }
-
-  /* content */
-  .slider-content-wrap {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    height: 100%;
-  }
-  /* social media */
-  .social-icons {
-    display: flex;
-    align-items: center;
-    gap: 16px;
-  }
-  .social-icons a {
-    border: 2px solid #fff;
-    border-radius: 50%;
-    width: 45px;
-    height: 45px;
-    display: inline-block;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  .social-icons img {
-    width: 22px;
-    height: 22px;
-  }
-  /* images */
-  .slider-images > img.next {
-    opacity: 1;
-    transition: 2s;
-    filter: blur(35px);
-    left: 100%;
-    top: 10%;
-    transform: translate(-50%, -50%) scale(0.3);
-  }
-  .slider-images > img.active {
-    opacity: 1;
-    transform: scale(1);
-    transition: 2s;
-    filter: blur(0px);
-    left: 0;
-    top: 50%;
-    transform: translateY(-50%);
-    z-index: 1;
-  }
-  .slider-images > img.previous {
-    opacity: 1;
-    transition: 2s;
-    filter: blur(25px);
-    left: 95%;
-    top: 90%;
-  }
-  .slider-images > img.inactive {
-    opacity: 0;
-    transition: 2s;
-    filter: blur(35px);
-    left: 100%;
-    top: 100%;
-    transform: translate(10%, 10%) scale(0.3);
-  }
-  .slider-images {
-    position: relative;
-    width: 50%;
-    height: 100%;
-    top: 0;
-  }
-  .slider-images > img {
-    position: absolute;
-    top: 0%;
-    left: 100%;
-    filter: blur(25px);
-    transform: translate(-50%, -50%) scale(0.3);
-    transition: opacity 3s;
-    object-fit: cover;
-    max-width: 593px;
-    max-height: 779px;
-    height: 100%;
-    min-height: 320px;
-  }
-
-  /* ========================= media query ============================== */
-  @media screen and (max-width: 1199px) {
-    .heading-style-2 {
+  top: -100px;
+  min-height: 700px;
+  background: radial-gradient(50% 50% at 50% 50%, #c7f6d0 0, #7cb686 92.19%);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 100%;
+  overflow: hidden;
+  position: relative;
+  z-index: 1;
+}
+#backgrounds,
+.background,
+.slider-images > img {
+  position: absolute;
+  top: 0;
+}
+#backgrounds {
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
+.background {
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  transition: opacity 2s ease-in-out;
+}
+.container-slide-content {
+  position: relative;
+  left: calc(50% - (1140px / 2));
+  width: 50%;
+  padding-block: 100px;
+  max-width: 525px;
+  height: 100%;
+}
+.slider-content-wrap {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 100%;
+}
+.social-icons {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+}
+.social-icons a {
+  border: 2px solid #fff;
+  border-radius: 50%;
+  width: 45px;
+  height: 45px;
+  display: inline-block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.social-icons img {
+  width: 22px;
+  height: 22px;
+}
+.slider-images > img.next {
+  opacity: 1;
+  transition: 2s;
+  filter: blur(35px);
+  left: 100%;
+  top: 10%;
+  transform: translate(-50%, -50%) scale(0.3);
+}
+.slider-images > img.active {
+  opacity: 1;
+  transform: scale(1);
+  transition: 2s;
+  filter: blur(0px);
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 1;
+}
+.slider-images > img.previous {
+  opacity: 1;
+  transition: 2s;
+  filter: blur(25px);
+  left: 95%;
+  top: 90%;
+}
+.slider-images > img.inactive {
+  opacity: 0;
+  transition: 2s;
+  filter: blur(35px);
+  left: 100%;
+  top: 100%;
+  transform: translate(10%, 10%) scale(0.3);
+}
+.slider-images {
+  position: relative;
+  width: 50%;
+  height: 100%;
+  top: 0;
+}
+.slider-images > img {
+  left: 100%;
+  filter: blur(25px);
+  transform: translate(-50%, -50%) scale(0.3);
+  transition: opacity 3s;
+  object-fit: cover;
+  max-width: 593px;
+  max-height: 779px;
+  height: 100%;
+  min-height: 320px;
+}
+@media screen and (max-width: 1199px) {
+  .heading-style-2 {
       font-size: 40px;
       line-height: 45px;
       margin-bottom: 30px;
-    }
-    p {
+  }
+  p {
       font-size: 17px;
       line-height: 28px;
       margin-bottom: 22px;
-    }
-    .container-slide-content  {
+  }
+  .container-slide-content {
       left: calc(50% - (920px / 2));
       padding-block: 80px;
       max-width: 475px;
-    }
-    .slider-images > img {
+  }
+  .slider-images > img {
       width: 453px;
       height: auto;
       aspect-ratio: 1/1.3;
-    }
   }
-  @media screen and (max-width: 991px) {
-    .heading-style-2 {
+}
+@media screen and (max-width: 991px) {
+  .heading-style-2 {
       font-size: 35px;
       line-height: 43px;
       margin-bottom: 22px;
-    }
-    p {
+  }
+  p {
       font-size: 16px;
       line-height: 26px;
       margin-bottom: 18px;
-    }
-    .container-slide-content  {
+  }
+  .container-slide-content {
       left: calc(50% - (720px / 2));
       padding-block: 70px;
       max-width: 405px;
-    }
-    .slider-images {
+  }
+  .slider-images {
       width: 45%;
-    }
-    .slider-images > img {
+  }
+  .slider-images > img {
       width: 340px;
       aspect-ratio: 1/1.3;
-    }
   }
-  @media screen and (max-width: 767px) {
-    .slider-main {
+}
+@media screen and (max-width: 767px) {
+  .slider-main {
       flex-direction: column;
-      min-height: 900px;
-    }
-    .social-icons a {
+      /* min-height: 900px; */
+  }
+  .social-icons a {
       width: 35px;
       height: 35px;
-    }
-    .social-icons img {
+  }
+  .social-icons img {
       width: 16px;
       height: 16px;
-    }
-    .container-slide-content  {
+  }
+  .container-slide-content {
       position: unset;
-      padding-block: 70px;
+      padding-block: 160px 0;
       max-width: 540px;
       width: 100%;
-    }
-    .slider-images {
+  }
+  .slider-images {
       width: 100%;
-    }
-    .slider-images > img {
+  }
+  .slider-images > img {
       height: 380px;
       aspect-ratio: 1/1.3;
       width: auto;
-    }
-    .slider-images > img.active {
+  }
+  .slider-images > img.active {
       top: 45%;
       left: 20%;
-    }
   }
-  @media screen and (max-width: 575px) {
-    .heading-style-2 {
+}
+@media screen and (max-width: 575px) {
+  .heading-style-2 {
       font-size: 30px;
       line-height: 40px;
       margin-bottom: 20px;
-    }
-    p {
+  }
+  p {
       font-size: 15px;
       line-height: 24px;
       margin-bottom: 16px;
-    }
-    .social-icons a {
+  }
+  #price{
+    margin-bottom: 0px;
+  }
+  .social-icons a {
       width: 32px;
       height: 32px;
-    }
-    .social-icons img {
+  }
+  .social-icons img {
       width: 15px;
       height: 15px;
-    }
-    .container-slide-content  {
-      padding: 50px 20px 50px 20px;
-      max-width: 100%;
-    }
-    .slider-images > img {
-      height: 100px;
-    }
-    .slider-images > img.active {
-      top: 50%;
-      left: 5%;
-    }
-    .slider-images > img.previous {
-      top: 100%;
-    }
   }
-
-  .fade-in-text {
-    animation: fadeIn 1s forwards;
+  .container-slide-content {
+      padding: 150px 20px 20px;
+      max-width: 100%;
+  }
+  .slider-images > img {
+      height: 100px;
+  }
+  .slider-images > img.active {
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+  .slider-images > img.previous {
+      top: 100%;
+  }
 }
-
-@keyframes fadeIn-text {
-    from {
-        opacity: 0;
-    }
-    to {
-        opacity: 1;
-    }
+.fade-in-text {
+  animation: fadeIn 3s forwards;
+}
+@keyframes fadeIn {
+  from {
+      opacity: 0;
+  }
+  to {
+      opacity: 1;
+  }
 }
