top products added

--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@
     18-compare
     19-checkout
 */
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 * {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
@@ -62,7 +62,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Playfair Display", serif;
+  font-family: "Roboto", sans-serif;
   margin-top: 0;
   font-weight: 600;
 }
